# fayda-auth-python

./: .env.example  README.md  pyproject.toml  requirements.txt  setup.py
fayda_auth/: __init__.py  core.py  exceptions.py
fayda_auth/config/: hosts.py  redis.py
fayda_auth/handlers/: fayda.py
fayda_auth/services/: token_exchange.py  user_info.py
fayda_auth/utils/: random.py  responses.py  utils.py  validators.py
tests/: test_core.py  test_hosts.py
